--- a/src/app/pages/ForAuthors/ForAuthors.scss
+++ b/src/app/pages/ForAuthors/ForAuthors.scss
@@ -158,6 +158,10 @@
                 padding-left: 0px;
               }
 
+              a {
+                text-decoration: underline;
+              }
+
               &-title {
                 color: var(--black);
                 font-size: 18px;
